--- a/index.html
+++ b/index.html
@@ -12,125 +12,166 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body class="page">
     <!-- Шапка сайта -->
     <header class="page-header">
-      <nav>
-        <a href="" class="logo"><span class="span-logo">Web</span>Studio</a>
-        <ul class="site-nav list">
-          <li><a href="" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+      <div class="container">
+        <nav class="nav-flex">
+          <a href="" class="logo"><span class="span-logo">Web</span>Studio</a>
+          <ul class="site-nav list">
+            <li class="item"><a href="" class="link">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item-nav">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item-nav">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-        <button type="button" class="btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />для вашего бизнеса
+          </h1>
+          <button type="button" class="btn-hero">Заказать услугу</button>
+        </div>
       </section>
       <!-- Преимущества -->
       <section class="features">
-        <h2 class="features-title">Скрытый заголовок</h2>
-        <ul class="features-list list">
-          <li>
-            <h3 class="features-list-title">Внимание к деталям</h3>
-            <p class="features-list-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Пунктуальность</h3>
-            <p class="features-list-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Планирование</h3>
-            <p class="features-list-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Современные технологии</h3>
-            <p class="features-list-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Скрытый заголовок</h2>
+          <ul class="features-list list">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Внимание к деталям</h3>
+              <p class="features-list-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Пунктуальность</h3>
+              <p class="features-list-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Планирование</h3>
+              <p class="features-list-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="features-list-item">
+              <h3 class="features-list-title">Современные технологии</h3>
+              <p class="features-list-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем мы занимаемся -->
       <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="work-list list">
-          <li><img src="./Image/box 1.jpg" alt="кодинг" width="370" /></li>
-          <li><img src="./Image/box 2.jpg" alt="оптимизация" width="370" /></li>
-          <li><img src="./Image/box 3.jpg" alt="готовое по" width="370" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-list-item">
+              <img src="./Image/box 1.jpg" alt="кодинг" width="370" />
+            </li>
+            <li class="work-list-item">
+              <img src="./Image/box 2.jpg" alt="оптимизация" width="370" />
+            </li>
+            <li class="work-list-item">
+              <img src="./Image/box 3.jpg" alt="готовое по" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
-            <img src="./Image/img 1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="team-list-title">Игорь Демьяненко</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./Image/img 2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="team-list-title">Ольга Репина</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./Image/img 3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="team-list-title">Николай Тарасов</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./Image/img 4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="team-list-title">Михаил Ермаков</h3>
-            <p class="team-list-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-list-item">
+              <img src="./Image/img 1.jpg" alt="Игорь Демьяненко" width="270" />
+              <div class="team-list-name">
+                <h3 class="team-list-title">Игорь Демьяненко</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./Image/img 2.jpg" alt="Ольга Репина" width="270" />
+              <div class="team-list-name">
+                <h3 class="team-list-title">Ольга Репина</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./Image/img 3.jpg" alt="Николай Тарасов" width="270" />
+              <div class="team-list-name">
+                <h3 class="team-list-title">Николай Тарасов</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./Image/img 4.jpg" alt="Михаил Ермаков" width="270" />
+              <div class="team-list-name">
+                <h3 class="team-list-title">Михаил Ермаков</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <a href="" class="logo"
-        >Web<span class="span-logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="footer-list list">
-          <li>
-            <a href="https://goo.gl/maps/ig4sHkHrLvTvoZ76A" class="address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="logo"
+          >Web<span class="span-logo-footer">Studio</span></a
+        >
+        <address class="footer-adr">
+          <ul class="footer-list list">
+            <li class="footer-list-item">
+              <a href="https://goo.gl/maps/ig4sHkHrLvTvoZ76A" class="address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-list-item">
+              <a href="mailto:info@example.com" class="link"
+                >info@example.com</a
+              >
+            </li>
+            <li class="footer-list-item">
+              <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
