--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
       <!-- Преимущества -->
-      <section class="features">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Скрытый заголовок</h2>
           <ul class="features-list list">
@@ -95,7 +95,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="work">
+      <section class="section work">
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
@@ -112,7 +112,7 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
@@ -149,7 +149,7 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="footer">
+    <footer class="section footer">
       <div class="container">
         <a href="" class="logo"
           >Web<span class="span-logo-footer">Studio</span></a
