--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     </header>
     <main>
       <!-- Герой -->
-      <section class="filters">
+      <section class="section filters">
         <div class="container">
           <h1 class="visually-hidden">Скрытый заголовок</h1>
           <ul class="filters-list list">
@@ -113,7 +113,7 @@
               <a href="" class="pictures-link">
                 <img src="./ImageHW2/5.jpg" alt="Коробки" width="370" />
                 <div class="pictures-list-name">
-                <h3 class="pictures-list-title">Проект Boxes</h3>
+                <h2 class="pictures-list-title">Проект Boxes</h2>
                 <p class="pictures-list-text">Приложение</p></a
               >
               </div>
@@ -131,7 +131,7 @@
               <a href="" class="pictures-link">
                 <img src="./ImageHW2/7.jpg" alt="Книга" width="370" />
                 <div class="pictures-list-name">
-                <h2 class="pictures-list-title">Издание Limited Edition</h2>
+                <h3 class="pictures-list-title">Издание Limited Edition</h3>
                 <p class="pictures-list-text">Дизайн</p></a
               >
               </div>
@@ -159,7 +159,7 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="footer">
+    <footer class="section footer">
       <div class="container">
         <a href="" class="logo"
           >Web<span class="span-logo-footer">Studio</span></a
